--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -180,6 +180,13 @@
         android:persistent="false"
         android:ringtoneType="alarm"
         android:order="-60"/>
+   
+    <com.arrow.support.preferences.SystemSettingSwitchPreference
+        android:key="show_app_volume"
+        android:title="@string/app_volume_title"
+        android:summary="@string/app_volume_summary"
+        android:defaultValue="false"
+        android:order="-5"/>
 
     <!-- Dial pad tones -->
     <SwitchPreference
